Fixed ad spacing

--- a/styles/main.sass
+++ b/styles/main.sass
@@ -287,7 +287,7 @@ article.post-wrapper
 
   div.post-header
     display: block
-    margin: 0
+    margin: 0 0 20px
     padding: 0
 
     img.post-image
